--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -3,14 +3,13 @@
   <head>
     <title>TinyApp</title>
   </head>
-  <% if (username) {%>
-  <h1><%= username %></h1>
+  <% if (user_id) {%>
+  <h1><%= user_id.email %></h1>
   <form action="/logout" method="POST">
     <input type="submit" value="Logout">
   </form>
   <% } else { %>
-  <form action="/login" method="POST">
-    <input type="text" name="username">
-    <input type="submit" value="Submit">
-  </form>
+  <a href="/register">Register</a>
+  <a href="/login">Login</a>
   <% } %>
+
