Finished tinyapp project, have not reviewed yet though

--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -2,8 +2,8 @@
   <body>
     <h1>Login</h1>
     <form action="/login" method="POST">
-      <input type="email" name="email">
-      <input type="password" name="password">
+      <input type="email" name="email" placeholder="Email">
+      <input type="password" name="password" placeholder="Password">
       <input type="submit" value="Submit">
     </form>
   </body>
