--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -5,6 +5,7 @@
         <% for (let value in sorted) { %>
           <div><%= value %> - <%= sorted[value].longURL %> - <a href="/urls/<%= value %>">Edit</a> <form style="display: inline" method="POST" action="/urls/<%= value %>/delete"><button>Delete</button></form></div>
           <% } %>
+          <div><a href="/urls/new">CREATE NEW SHORT LINKS</a></div>
         <% } else { %>
             <h1>Please login or register first</h1>
           <% } %>
