--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -3,7 +3,9 @@
     <div id="linkcontainer">
       <% if (user_id) { %>
         <% for (let value in sorted) { %>
-          <div><%= value %> - <%= sorted[value].longURL %> - <a href="/urls/<%= value %>">Edit</a> <form style="display: inline" method="POST" action="/urls/<%= value %>/delete"><button>Delete</button></form></div>
+          <div>
+            <%= value %> - <%= sorted[value].longURL %> - <a href="/urls/<%= value %>">Edit</a> <form style="display: inline" method="POST" action="/urls/<%= value %>/delete"><button>Delete</button></form>
+          </div>
           <% } %>
           <div><a href="/urls/new">CREATE NEW SHORT LINKS</a></div>
         <% } else { %>
