Added method override

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -4,7 +4,7 @@
       <% if (user_id) { %>
         <% for (let value in sorted) { %>
           <div>
-            <%= value %> - <%= sorted[value].longURL %> - <a href="/urls/<%= value %>">Edit</a> <form style="display: inline" method="POST" action="/urls/<%= value %>/delete"><button>Delete</button></form>
+            <%= value %> - <%= sorted[value].longURL %> - <a href="/urls/<%= value %>">Edit</a> <form style="display: inline" method="POST" action="/urls/<%= value %>/delete?_method=DELETE"><button>Delete</button></form>
           </div>
           <% } %>
           <div><a href="/urls/new">CREATE NEW SHORT LINK</a></div>
